[package]
name = "bss"
version = "0.1.0"
edition = "2021"

[dependencies]
#
lexopt = "0.3.0"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
#
warp = { version = "0.3.7", features = [] }
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["full"] }
tokio-util = { version = "=0.7.11", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", features = [] }
#
socket2 = { version = "0.5.7", features = ["all"] }
# compatibility range
libc = "~0.2.150"
#
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = {version = "=0.1.4", features = ["tokio"] }
# Required by hyper
# httparse = { version = "1.8" }
http-body-util = { version = "0.1" }
# pin-project-lite = { version = "0.2.4" }